--- a/BaseSmashConcept/WebBuild/WebBuild.html
+++ b/BaseSmashConcept/WebBuild/WebBuild.html
@@ -132,5 +132,6 @@
 			</div>
 		</div>
 		<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
+    <p>The game is controlled with xbox controllers. You can navigate the menu with the dpad and the 'a' button. The WebBuild is sort of buggy in places, compared to the normal build.</p>
 	</body>
 </html>
